--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Treact</title>
         <link rel="stylesheet" type="text/css" href="slick/slick.css" />
         <link rel="stylesheet" href="./styles.css" />
         <script
@@ -143,7 +143,7 @@
                                 adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.
                             </p>
-                            <div class="service--container">
+                            <div class="service__container">
                                 <div class="service--wrapper">
                                     <div class="service">
                                         <div class="service__img">
@@ -803,38 +803,38 @@
                         <div class="links">
                             <ul class="footer__links">
                                 <li class="footer__link--title">MAIN</li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Blog</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">FAQs</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Support</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">About Us</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Blog</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">FAQs</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Support</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">About Us</a></li>
                             </ul>
                             <ul class="footer__links">
                                 <li class="footer__link--title">PRODUCT</li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Log In</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Personal</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Business</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Team</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Log In</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Personal</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Business</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Team</a></li>
                             </ul>
                             <ul class="footer__links">
                                 <li class="footer__link--title">PRESS</li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Logos</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Events</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Stories</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Office</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Logos</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Events</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Stories</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Office</a></li>
                             </ul>
                             <ul class="footer__links">
                                 <li class="footer__link--title">TEAM</li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Career</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Founders</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Culture</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Onboarding</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Career</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Founders</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Culture</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Onboarding</a></li>
                             </ul>
                             <ul class="footer__links">
                                 <li class="footer__link--title">LEGAL</li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">GDPR</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Privacy Policy</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Terms of Service</a></li>
-                                <li class="footer__link"><a class="footer__link--a" href="#">Disclaimer</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">GDPR</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Privacy Policy</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Terms of Service</a></li>
+                                <li class="footer__list"><a class="footer__link--a" href="#">Disclaimer</a></li>
                             </ul>
                         </div>
                         <div class="divider"></div>
