Add FAQ section

--- a/index.html
+++ b/index.html
@@ -784,6 +784,49 @@
                     </div>
                 </div>
             </section>
+            <section id="faq">
+                <div class="container">
+                    <div class="row">
+                        <div class="faq__header">
+                            <h5 class="faq__title">
+                                <span class="blue">FAQS</span>
+                            </h5>
+                            <h2 class="faq__subtitle">
+                                You have <span class="blue">Questions ?</span>
+                            </h2>
+                            <p class="faq__para">
+                                And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                        </div>
+                        <div class="faqs--wrapper">
+                            <div class="faqs__accordion">
+                                <span>Are all the templates easily customizable ?</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="faqs__accordion">
+                                <span>For how long do you usually support a standalone template ?</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="faqs__accordion">
+                                <span>What kind of payment methods do you accept ?</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="faqs__accordion">
+                                <span>Is there a subscription service to get the latest templates ?</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="faqs__accordion">
+                                <span>Are there templates compatible with React ?</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                            <div class="faqs__accordion">
+                                <span>Do you really support Internet Explorer 11 ?</span>
+                                <i class="fa-solid fa-angle-down"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section id="footer">
                 <div class="row flex-row responsive-col">
                     <div class="prefooter">
