Add padding, restructure CSS

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                 ullamco laboris nisi ut aliquip ex ea commodo
                                 consequat.
                             </p>
-                            <div class="row flex-row">
+                            <div class="flex-row">
                                 <div class="value__blurb--wrapper">
                                     <div class="value__affordable">
                                         <div class="value__affordable--left">
